# service-search-api

./: .gitignore  Makefile  README.md  manifest_template.yml  openapi.json  package-lock.json  package.json  pyproject.toml  pytest.ini
.dependabot/: config.yml
.github/workflows/: continuous-integration.yml  pr-lint.yaml
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml  run-integration-tests.yml  run-sandbox-tests.yml
azure/templates/: run-integration-tests.yml  run-smoke-tests.yml
sandbox/: Dockerfile  Makefile  app.js  app.spec.js  handlers.js  index.js  package-lock.json  package.json
sandbox/responses/: organisations-not-found_v2.json  search-postcode-invalid_v2.json  search-postcode-not-found_v2.json
sandbox/test/: app.spec.js
scripts/: generate_postman_collection.sh  get_apigee_token.sh  inline_examples.py  install_prerequisites.txt
specification/: postman-collection.json  service-search-api.yaml  service-search-api_v2.yaml
specification/examples/: 400-SEND.json  400-send.json  403-FORBIDDEN.json  429-TOO-MANY-REQUESTS.json  500-INTERNAL-SERVER-ERROR.json  RequestingOrganisations.json  bad-request.json  invalid-request.json  operational-outcome.json  organisation-types-not-found_v1.json  organisation-types-single-item_v1.json  organisation-types_v1.json  organisation_v1.json  organisation_v2.json  organisations-not-found_v2.json  organisations_v2.json  (+20 more)
tests/: Makefile  conftest.py  pytest.ini  test_endpoints.py  test_search_organisation_types.py  test_search_organisations.py  test_search_postcode.py  test_status_ping.py
(+29 files in other folders)
